--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -8,4 +8,5 @@ This is an item in your portfolio. It can have images or nice text. If you name 
 
 Example: editing a markdown file for a talk
 
-<img src=‘/images/editing-talk.png’>
+<img src=/images/editing-talk.png>
+# ![talk](/images/editing-talk.png)
